sorted/tests/05-match-expr.stderr
error: Fmt(e) should sort before Io(e)
  --> tests/05-match-expr.rs:88:13
   |
88 |             Fmt(e) => write!(f, "{}", e),
   |             ^^^^^^
